--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-search-autocomplete": "^7.2.2",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
+    "turnstone": "^2.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
