--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "antd": "^4.23.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-search-autocomplete": "^7.2.2",
